# toxicity-fairness-bench

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: dependencies.py  main.py
app/routers/: data.py  scorer.py
app/templates/: index.html
docs/: datasets.md  deploy.md  execution_plan.md  gemini-rate-limits.md  prompt_design.md
docs/superpowers/plans/: 2026-04-04-benchmark-completion.md
docs/superpowers/specs/: 2026-04-04-benchmark-completion-design.md
notebooks/: analysis.ipynb  bias_analysis.ipynb
results/: raw_results.parquet
scripts/: dashboard.py  run_benchmark.py
src/toxicity_fairness/: __init__.py
src/toxicity_fairness/analyzers/: base.py  claude.py  gemini.py  perspective.py
src/toxicity_fairness/data/: loaders.py
src/toxicity_fairness/metrics/: fairness.py
src/toxicity_fairness/utils/: cache.py
static/css/: main.css
static/js/: app.js
tests/: test_all.py
