[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "toxicity-fairness-bench"
version = "0.1.0"
description = "Fairness evaluation framework for commercial toxicity detection APIs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Lydia Huang", email = "jiahua.mp3@gmail.com" }]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "anthropic>=0.25",
    "google-generativeai>=0.5",
    "google-api-python-client>=2.120",
    "python-dotenv>=1.0",
    "plotly>=5.20",
    "streamlit>=1.32",
    "datasets>=2.18",
    "tqdm>=4.66",
    "tenacity>=8.2",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.9",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
